--- a/src/gatsby-theme-garden/components/graph-button.css
+++ b/src/gatsby-theme-garden/components/graph-button.css
@@ -1,5 +1,6 @@
 .graph-button {
   border: 0;
+  padding-top: 2px; /* Balance with search icon and light-dark theme toggle */
   background: none;
   cursor: pointer;
   transform: scale(0.875); /*24.5px in height; balanced between light and dark icon*/
