--- a/_layouts/src/gatsby-theme-garden/components/stacked-layout.css
+++ b/_layouts/src/gatsby-theme-garden/components/stacked-layout.css
@@ -2,6 +2,17 @@
 /* Inter */
 @import url('https://rsms.me/inter/inter.css');
 
+/* JetBrains Mono*/
+/*@font-face{
+  font-family: 'JetBrains Mono';
+  src: url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/fonts/webfonts/JetBrainsMono-Regular.woff2') format('woff2'),
+       url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/fonts/otf/JetBrainsMono-Regular.otf') format('opentype'),
+       url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/fonts/ttf/JetBrainsMono-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}*/
+
 /* Styling */
 html {
   font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
@@ -21,7 +32,7 @@ samp {
   -webkit-font-feature-settings: "liga" on, "calt" on;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-family: Menlo, Consolas, Monaco, Liberation Mono, Courier New, monospace;
+  font-family: /*'JetBrains Mono',*/ Menlo, Consolas, Monaco, Liberation Mono, Courier New, monospace;
   font-size: 0.875rem;
   padding: 0.125rem 0.25rem;
   border-radius: 0.25rem;
