--- a/_layouts/src/gatsby-theme-garden/components/theme.css
+++ b/_layouts/src/gatsby-theme-garden/components/theme.css
@@ -1,7 +1,8 @@
 body.light-mode {
   --main-bg: #fafafc;
   --note-bg: #ffffff;
-  --text: #1a202c;
+  --text: #313641;        /* 10% lighter tint */
+  --text-strong: #1a202c;
   --separator: #e2e8f0;
   --shadow: rgba(0, 0, 0, 0.1);
   --link: #d9ac0a; /* 15% tint */ /* #cca20a; 20% tint */ /* #e6b60b; 10% tint */ /* #3182ce; original blue */
@@ -27,7 +28,8 @@ body.light-mode samp {
 body.dark-mode {
   --main-bg: #000000;
   --note-bg: #0a0d11;
-  --text: #e2e0d9; /*#ebe9e4;*/ /*#dedede;*/
+  --text: #cbcac3;          /* 10% darker tint */
+  --text-strong: #e2e0d9;   /*#ebe9e4;*/ /*#dedede;*/
   --separator: #252525;
   --shadow: rgba(255, 255, 255, 0.1);
   --link: #ffca0c; /*#3da1ff;*/
